--- a/.github/workflows/build-ffmpeg.yml
+++ b/.github/workflows/build-ffmpeg.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install ffmpeg libopencore-amrnb-dev libopencore-amrwb-dev
+          sudo apt-get install libmp3lame-dev libopencore-amrnb-dev libopencore-amrwb-dev
           wget http://www.tortall.net/projects/yasm/releases/yasm-1.3.0.tar.gz
           tar -zxvf yasm-1.3.0.tar.gz
           cd yasm-1.3.0
@@ -28,7 +28,7 @@ jobs:
         run: |
           git clone https://git.ffmpeg.org/ffmpeg.git
           cd ffmpeg
-          ./configure --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-version3
+          ./configure --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-version3
           make -j$(nproc)
           sudo make install
       - name: Test ffmpeg
