--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -16,13 +16,16 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # WyriHaximus/github-action-get-previous-tag@master need it
+          fetch-depth: 0
 
       - name: Package
         run: |
           xmake config --yes --verbose --plat=linux --arch=x86_64 --mode=release
 
       - name: Get Previous tag
-        id: previoustag
+        id: previous_tag
         uses: WyriHaximus/github-action-get-previous-tag@master
 
       - name: Upload binaries to release
@@ -31,5 +34,5 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: build/package/x86_64-linux-gnu-release.tar.bz2
           asset_name: build/package/x86_64-linux-gnu-release.tar.bz2
-          tag: ${{ steps.previoustag.outputs.tag }}
+          tag: ${{ steps.previous_tag.outputs.tag }}
           overwrite: true
