--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,13 +15,16 @@ jobs:
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # WyriHaximus/github-action-get-previous-tag@master need it
+          fetch-depth: 0
 
       - name: Package
         run: |
           xmake config --yes --verbose --plat=windows --arch=x64 --mode=release
 
       - name: Get Previous tag
-        id: previoustag
+        id: previous_tag
         uses: WyriHaximus/github-action-get-previous-tag@master
 
       - name: Upload binaries to release
@@ -30,5 +33,5 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: build/package/x64-windows-msvc-release.7z
           asset_name: build/package/x64-windows-msvc-release.7z
-          tag: ${{ steps.previoustag.outputs.tag }}
+          tag: ${{ steps.previous_tag.outputs.tag }}
           overwrite: true
