--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,41 +1,31 @@
 name: linux
 
-permissions:
-  contents: write
-
 on:
   push:
     branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Setup xmake
         uses: xmake-io/github-action-setup-xmake@v1
         with:
-          xmake-version: latest
+          xmake-version: branch@master
+          actions-cache-folder: .xmake-cache-${{ matrix.os }}
+          package-cache: true
+          package-cache-key: ${{ matrix.os }}
+          build-cache: true
+          build-cache-key: ${{ matrix.os }}
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          # WyriHaximus/github-action-get-previous-tag@master need it
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
-      - name: Package
+      - name: Build
         run: |
-          xmake config --yes --verbose --plat=linux --arch=x86_64 --mode=release
-
-      - name: Get Previous tag
-        id: previous_tag
-        uses: WyriHaximus/github-action-get-previous-tag@master
-
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/package/x86_64-linux-gnu-release.tar.bz2
-          asset_name: build/package/x86_64-linux-gnu-release.tar.bz2
-          tag: ${{ steps.previous_tag.outputs.tag }}
-          overwrite: true
+          xmake -y -D
