--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -1,4 +1,4 @@
-name: linux
+name: xmake
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
 
