--- a/.github/workflows/xmake.yml
+++ b/.github/workflows/xmake.yml
@@ -18,7 +18,8 @@ jobs:
         uses: xmake-io/github-action-setup-xmake@v1
         with:
           xmake-version: branch@master
-          actions-cache-folder: .xmake-cache-${{ matrix.os }}
+          actions-cache-folder: '.xmake-cache'
+          actions-cache-key: ${{ matrix.os }}
           package-cache: true
           package-cache-key: ${{ matrix.os }}
           build-cache: true
